--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,12 +1,14 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-4 col-lg-offset-4">
-      <form class="form-inline">
+      <form class="form-inline" novalidate >
         <div class="form-group">
-          <label for="username">username</label>
-          <input type="text" class="form-control" id="username" placeholder="username">
+          <select class="form-control" name="username" id="username" ng-model="username">
+            <option value="">请选择你的用户名</option>
+            <option ng-repeat="user in users" value="{{user.username}}">{{user.username}}</option>
+          </select>
         </div>
-        <button type="submit" class="btn btn-default">登陆</button>
+        <button type="submit" class="btn btn-default" ng-click="submit()" ng-disabled="isInvalid()">登陆 {{username}}</button>
       </form>
     </div>
   </div>
