添加express session, express user login interceptor, user logout, ajax status code, etc..

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -4,7 +4,7 @@
       <form class="form-inline" novalidate >
         <div class="form-group">
           <select class="form-control" name="username" id="username" ng-model="username">
-            <option value="">请选择你的用户名</option>
+            <option value="">我是:</option>
             <option ng-repeat="user in users" value="{{user.username}}">{{user.username}}</option>
           </select>
         </div>
