--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -14,13 +14,9 @@
 <link rel="stylesheet" href="/css/main.css">
 
 <!-- JS stack -->
-<!--
 <script src="/js/lib/angularjs/angular.min.js"></script>
+<script src="/js/lib/angularjs/angular-route.min.js"></script>
 <script src="/js/lib/angularjs/angular-animate.min.js"></script>
--->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.9/angular.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.9/angular-route.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.9/angular-animate.min.js"></script>
 
 <!-- 3rd party js lib -->
 <script src="/js/lib/jquery-2.1.1.min.js"></script>
