添加退出/登录UI MAKE ABLE 一个controller改动需要另一个controller级联改变,

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
   <% include ../partials/headers %>
 </head>
 <body>
-  <% include ../partials/header %>
-  <!-- -->
+  <% include ../partials/top_banner %>
   
-  <div ng-app="myApp">
-    <div ng-view></div> 
-  </div>
-  
+  <!-- angularjs template view port -->  
+  <div ng-view></div> 
   
   <% include ../partials/footer %>
 </body>
