--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<div id="footer">
+<footer id="footer">
   <p class="">© Copyright 2014 The Awesome People</p>
-</div>
+</footer>
 <script type="text/javascript" src="/js/myapp/services/service.js"></script>
 <script type="text/javascript" src="/js/myapp/controllers/controller.js"></script>
 <script type="text/javascript" src="/js/myapp/app.js"></script>
