--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -26,7 +26,7 @@
       <!-- start: RIGHT PANEL -->
       <div ng-if="isCateA">
         <div class="panel panel-default" ng-repeat="merchantContent in curMenu.contents">
-          <div class="panel-heading">
+          <div class="panel-heading bg-primary">
             <h3 class="panel-title">{{merchantContent.merchants_name}}</h3>
           </div>
           <div class="panel-body">
@@ -34,7 +34,7 @@
             <div >
               <div class="panel panel-default" >
                 <div class="panel-heading">
-                  <h3 class="panel-title">荤素配</h3>
+                  荤素配
                 </div>
                 <div class="panel-body">
                   <form>
@@ -105,7 +105,7 @@
 
               <div class="panel panel-default" ng-if="merchantContent.contents[1]">
                 <div class="panel-heading">
-                  <h3 class="panel-title">{{merchantContent.contents[1].subcate_name}}</h3>
+                  {{merchantContent.contents[1].subcate_name}}
                 </div>
                 <div class="panel-body">
                   <ul class="form-inline">
@@ -126,7 +126,7 @@
 
       <div ng-if="!isCateA">
         <div class="panel panel-default" ng-repeat="merchantContent in curMenu.contents">
-          <div class="panel-heading">
+          <div class="panel-heading bg-primary">
             <h3 class="panel-title">{{merchantContent.merchants_name}}</h3>
           </div>
           <div class="panel-body">
@@ -135,7 +135,7 @@
             <div ng-repeat="subCateContents in merchantContent.contents">
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h3 class="panel-title">{{subCateContents.subcate_name}}</h3>
+                  {{subCateContents.subcate_name}}
                 </div>
                 <div class="panel-body">
                   <ul class="form-inline">
