--- a/views/partials/top_banner.ejs
+++ b/views/partials/top_banner.ejs
@@ -15,7 +15,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/#/">选餐</a></li>
+        <li><a href="/#/">选餐</a></li>
         <li><a href="javascript:void(0);">Link</a></li>
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
