--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-4 col-lg-offset-4">
+    <div class="col-lg-4 col-lg-offset-4" style="height: 28em; padding-top: 11em; text-align: center;">
       <form class="form-inline" novalidate >
         <div class="form-group">
           <select class="form-control" name="username" id="username" ng-model="username">
