--- a/views/partials/top_banner.ejs
+++ b/views/partials/top_banner.ejs
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/#/">选餐</a></li>
-        <li><a href="javascript:void(0);">Link</a></li>
+        <li><a href="/#/ordertoday">今日订单</a></li>
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
