add angularjs directives

--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -30,4 +30,5 @@
 <script src="/js/myapp/constants.js"></script>
 <script type="text/javascript" src="/js/myapp/services/service.js"></script>
 <script type="text/javascript" src="/js/myapp/controllers/controller.js"></script>
+<script type="text/javascript" src="/js/myapp/directives/directive.js"></script>
 <script type="text/javascript" src="/js/myapp/app.js"></script>
