--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -27,7 +27,8 @@
 <script src="/js/lib/underscore.js"></script>
 
 <!-- my app js lib -->
-<script src="/js/myapp/constants.js"></script>
+<script type="text/javascript" src="/js/myapp/constants.js"></script>
+<script type="text/javascript" src="/js/myapp/utils.js"></script>
 <script type="text/javascript" src="/js/myapp/services/service.js"></script>
 <script type="text/javascript" src="/js/myapp/controllers/controller.js"></script>
 <script type="text/javascript" src="/js/myapp/directives/directive.js"></script>
