--- a/public/partials/ordertoday.html
+++ b/public/partials/ordertoday.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
   <div class="row">
     <table class="table">
-      <tr ng-repeat="record in datas"><td>{{record.username}}</td><td>{{record.foods}}</td></tr>
+      <tr ng-repeat="record in datas">
+      <td>{{record.username}}</td><td>{{record.foods}}</td><td>{{record.createdTime | date:"yyyy-MM-dd hh:mm"}}</td>
+      </tr>
     </table>
   </div>
 </div>
