--- a/views/partials/top_banner.ejs
+++ b/views/partials/top_banner.ejs
@@ -17,6 +17,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/#/">选餐</a></li>
         <li><a href="/#/ordertoday">今日订单</a></li>
+        <li><a href="/#/users">用户信息</a></li>
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
