--- a/views/partials/top_banner.ejs
+++ b/views/partials/top_banner.ejs
@@ -18,6 +18,7 @@
         <li><a href="/#/">选餐</a></li>
         <li><a href="/#/ordertoday">今日订单</a></li>
         <li><a href="/#/users">用户信息</a></li>
+        <li><a href="/#/admin/updatedb">更新数据库</a></li>
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
