* 解决使用socketio中遇到的模块循环引用(circular require)问题 * 添加socketio实时更新数据更新操作过程中的结果反馈

--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -17,6 +17,9 @@
 <link rel="stylesheet" href="/css/main.css">
 
 <!-- JS stack -->
+<script src="/socket.io/socket.io.js"></script>
+
+<!-- angularjs -->
 <script src="/js/lib/angularjs/angular.min.js"></script>
 <script src="/js/lib/angularjs/angular-route.min.js"></script>
 <script src="/js/lib/angularjs/angular-animate.min.js"></script>
@@ -25,6 +28,7 @@
 <script src="/js/lib/jquery-2.1.1.min.js"></script>
 <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="/js/lib/underscore.js"></script>
+
 
 <!-- my app js lib -->
 <script type="text/javascript" src="/js/myapp/constants.js"></script>
